--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,28 @@
 
 	<build>
 		<plugins>
+		
+		
+		<!-- this one copied from stackoverflow espicially for using in jetty in java 8
+		 --><plugin>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-maven-plugin</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>5.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-commons</artifactId>
+            <version>5.0.2</version>
+        </dependency>
+    </dependencies>
+</plugin>
+		
+
+
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
