--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	
+<!-- 	
 	<filter>
     <filter-name>oemInViewFilter</filter-name>
     <filter-class>
@@ -50,6 +50,6 @@
     <filter-name>oemInViewFilter</filter-name>
     <url-pattern>/*</url-pattern>
 </filter-mapping>
-
+uncomment this, the other way to overcome lazyInitialization exception-->
 
 </web-app>
